set(BINARY ${CMAKE_PROJECT_NAME})

set(CMAKE_VERBOSE_MAKEFILE ON)

set(CMAKE_CXX_FLAGS "-Wall -Wextra -pedantic -std=c++17")
set(CMAKE_CXX_FLAGS_DEBUG "-O0 -ggdb -DDEBUG")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")

add_definitions(-DFONT_RENDER_STYLE=FONT_RENDER_BLENDED)

INCLUDE(FindPkgConfig)

PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(SDL2_ttf REQUIRED SDL2_ttf)
PKG_SEARCH_MODULE(LIBCONFIG++ REQUIRED libconfig++)
PKG_SEARCH_MODULE(FONTCONFIG REQUIRED fontconfig)

include_directories(${SDL2_ttf_INCLUDE_DIRS} ${LIBCONFIG++_INCLUDE_DIRS} ${FONTCONFIG_INCLUDE_DIRS})

file(GLOB_RECURSE SOURCES LIST_DIRECTORIES true *.h *.cpp)

set(SOURCES ${SOURCES})

add_executable(${BINARY}_run ${SOURCES})

add_library(${BINARY}_lib STATIC ${SOURCES})

target_link_libraries(${BINARY}_run ${SDL2_ttf_LIBRARIES} ${LIBCONFIG++_LIBRARIES} ${FONTCONFIG_LIBRARIES})
target_link_libraries(${BINARY}_lib ${SDL2_ttf_LIBRARIES} ${LIBCONFIG++_LIBRARIES} ${FONTCONFIG_LIBRARIES})
